tool: run open rewrite recipe on jpo-ode-core for Spring upgrade